# greetd-waycratedm

./: CMakeLists.txt  README.md  _typos.toml
.github/workflows/: build.yml
asserts/: source.qrc
contrib/archlinuxlocal/: PKGBUILD
misc/sysuser/: marine.conf
misc/tmpfiles/: marine.conf
qml/: DesktopDialog.qml  MainView.qml  SettingsItemDelegate.qml  SettingsPage.qml  TimePanel.qml  main.qml
src/: CommandLine.cpp  CommandLine.h  DesktopConfigListModel.cpp  DesktopConfigListModel.h  DesktopListModel.cpp  DesktopListModel.h  Settings.cpp  Settings.h  main.cpp
